[package]
name = "mmo"
version = "0.0.1"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The rust mmo crate"
documentation = "https://docs.rs/mmo/"
homepage = "https://dwarfhack.com/"
readme = "README.md"
repository = "https://github.com/dwarfhack/mmo"

[dependencies]
actix-web = "4.0.0-beta.8"
tokio = { version = "1.3.0", features = ["full"] }